--- a/lib/NEWS
+++ b/lib/NEWS
@@ -2,7 +2,7 @@ GNU SASL LIBRARY NEWS -- History of user-visible changes.        -*- outline -*-
 Copyright (C) 2002, 2003, 2004 Simon Josefsson
 See the end for copying conditions.
 
-* Changes in 0.1.0 (unreleased)
+* Changes in 0.1.0 (released 2004-04-16)
 
 ** The library re-licensed to LGPL and distributed as a separate package.
 This means a fork of this NEWS file, all the entries below relate to
