*** empty log message ***

--- a/lib/ChangeLog
+++ b/lib/ChangeLog
@@ -1,5 +1,33 @@
 2004-04-16  Simon Josefsson <simon@josefsson.org>
 
+	* NEWS: Version 0.1.0.
+
+2004-04-16  Simon Josefsson <simon@josefsson.org>
+
+	* README-alpha: Fix versions.
+
+2004-04-16  Simon Josefsson <simon@josefsson.org>
+
+	* Makefile.am: Add release target.
+
+2004-04-16  Simon Josefsson <simon@josefsson.org>
+
+	* NEWS: Add.
+
+2004-04-16  Simon Josefsson <simon@josefsson.org>
+
+	* NEWS, configure.ac: Bump versions.
+
+2004-04-16  Simon Josefsson <simon@josefsson.org>
+
+	* src/Makefile.am: Fix -I's.
+
+2004-04-16  Simon Josefsson <simon@josefsson.org>
+
+	* Makefile.am: Fix ChangeLog target.
+
+2004-04-16  Simon Josefsson <simon@josefsson.org>
+
 	* README: Fix.
 
 2004-04-16  Simon Josefsson <simon@josefsson.org>
