Update PGP key.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 GNU SASL AUTHORS -- information about the authors
-Copyright (C) 2002, 2003 Simon Josefsson
+Copyright (C) 2002, 2003, 2004 Simon Josefsson
 See the end for copying conditions.
 
 Simon Josefsson <simon@josefsson.org>
@@ -11,33 +11,33 @@ Comment: This 0xB565716F key is used to sign releases of gsasl.
 mKsEPNUHKwEFALqJSBHn6Qk5ex138kwymxA3idCFoTi5Q6mVooEVVaYVfeDG+5uV
 T5rhTFDfDcT9SO0eIlfKOraSRnVEHyDDH2PAgJFxyneFELcmLUQ66D+m8z+ziGro
 6bcDSBBDMRkHIX6/kH/vnevjqivIld+j8WTcVX+SArcKyzgQ58uMTrfQdLqzh6D9
-sE/838+ZPZkabmKKWMVWccoaUbWGYOcNwO0ABim0IVNpbW9uIEpvc2Vmc3NvbiA8
-amFzQGV4dHVuZG8uY29tPojYBBMBAgAiAhsDBAsHAwIDFQIDAxYCAQIeAQIXgAUC
-P6QrUQUJA7xyJgAKCRDtoh6UtWVxbwueBP4uh9ZEOuSjt2n5OpfuAablsrRzhlgP
-fluBMfjHNynEFsGjn81l81TCqStRln7wDUj95ZufSi3YvoYSFG1jffGMk/k2trgI
-NtT3kxaGkfns6dykBuV7Ki2wWqdJkTe1ibyai+RCqt+J1ldSUuHdfQZ5wALPJQRb
-4Hqi7M29azFHcfxbMLf3yGYyBuKC7eBVNVaR58UTFK6r0CX3T7eGuk8biEYEExEC
-AAYFAj1Y8r8ACgkQV5Mp08AbKiIX9wCfR2rMiXdKzZB95acA5YSQ4MLQyygAn1Nv
-7M36SAofR/73WjqlPpVAQ+fRiEwEExECAAwFAj1esHUFgwFXijYACgkQvLvElXGK
-klYZnQCeOXIzmEoZ5yOVNygphYmUwON/S8IAn32gWDyaTMpqyDcJEQeLdjcW7boS
-tCVTaW1vbiBKb3NlZnNzb24gPHNpbW9uQGpvc2Vmc3Nvbi5vcmc+iNgEEwECACIC
-GwMECwcDAgMVAgMDFgIBAh4BAheABQI/pCtUBQkDvHImAAoJEO2iHpS1ZXFvPREE
-/j3fX+cLxCCZNTjMhThGFujiT7ty4x1jVc91J6QOA+Jp+78NIIeyg3JTeR3WIv7/
-WFNzLKJXJEEcga+0ViPjoLfvGsHMAnwXqPYAxu1cDY4jId0bCYgoVlnfF9gwOWxe
-btotLpCiuXGL/168zEAXWJpPg6r2MfPhAKUJ9G8q52OOWJW3cObxoZ2gyXjuWOFt
-ygZ1vUAqP/8UGeZNdajHD5uIRgQTEQIABgUCPVjywgAKCRBXkynTwBsqImY3AKCS
-COO5LlNxmritUFY1i7VXBCUlZgCgll/6kE0G/NP3E6AdyzVwAzBPgUeITAQTEQIA
-DAUCPV6wdQWDAVeKNgAKCRC8u8SVcYqSVleXAJ9NZKUvb/erk53fMFUwpUeClOjh
-qwCcC3Du9UQjCn2k+7LWgqNMH+huqW24qwQ81Qd7AQUA2PTaoT8RNkFDlX7UCOB9
+sE/838+ZPZkabmKKWMVWccoaUbWGYOcNwO0ABim0JVNpbW9uIEpvc2Vmc3NvbiA8
+c2ltb25Aam9zZWZzc29uLm9yZz6I2AQTAQIAIgIbAwQLBwMCAxUCAwMWAgECHgEC
+F4AFAkCGvikFCQSfBP4ACgkQ7aIelLVlcW9oqwT/a2nWkFFy1q16WURE8vp+Tqu6
+i4r5mTdyHjbhQeZh5Pub5DEJiFuWXxE73JVrnNozacQbVbsnn54B4Xv6tuEDMxaT
+XSjreDY6D08urM8A0gnUHCAOwxtmepm9wxk/l3WAXWwzQoQaqZ2PSPFGW4Epk8+J
+wWKoLv1O2i9NbycGEccF9rr6I12319Vzk+P4P3FOgCwadAQHSGS3Y6hlLm/RGIhG
+BBMRAgAGBQI9WPLCAAoJEFeTKdPAGyoiZjcAoJII47kuU3GauK1QVjWLtVcEJSVm
+AKCWX/qQTQb80/cToB3LNXADME+BR4hMBBMRAgAMBQI9XrB1BYMBV4o2AAoJELy7
+xJVxipJWV5cAn01kpS9v96uTnd8wVTClR4KU6OGrAJwLcO71RCMKfaT7staCo0wf
+6G6pbbQhU2ltb24gSm9zZWZzc29uIDxqYXNAZXh0dW5kby5jb20+iNgEEwECACIC
+GwMECwcDAgMVAgMDFgIBAh4BAheABQJAhr4rBQkEnwT+AAoJEO2iHpS1ZXFvkxgE
+/2ZfCBqYKIe3SDM0tOVNrIeSZuVNUyn2xoqRKK4VomvTI1eMShfGa0twPVlBB5xX
+Ht06yRbwjobJykmDc/Hmteel+FVWOcehnXq8T22gLENlEM0CUZellosNwFwdnWGO
+HGZs/B4BVCh2pzsCra6di7MKCznZDOHX3TBLoqVHjWzCldxtwc6Y7fAsEtrLVos4
++0JvjQoYYgHQyril5ywHYs+IRgQTEQIABgUCPVjyvwAKCRBXkynTwBsqIhf3AJ9H
+asyJd0rNkH3lpwDlhJDgwtDLKACfU2/szfpICh9H/vdaOqU+lUBD59GITAQTEQIA
+DAUCPV6wdQWDAVeKNgAKCRC8u8SVcYqSVhmdAJ45cjOYShnnI5U3KCmFiZTA439L
+wgCffaBYPJpMymrINwkRB4t2NxbtuhK4qwQ81Qd7AQUA2PTaoT8RNkFDlX7UCOB9
 vaRFxrX+dN7l6QO+O0Mg7dVdjItEnaaYkJ+r4LXecI47HogsUGExRdDYGT0Dq7aZ
 8GkC4UKPXc3q2KWQ3ib3wj3qnCGm3IX/I249ydYLAzQyWqMW09wLB5vxhPi4yjet
 4FTGWmtYUlGzDb7+6VZilYRTty0vhFF4cVXlO2R+vgPxFMvUc7o8WGDnQ3iyWAiz
-kQAGKYjFBBgBAgAPAhsMBQI/pCt8BQkDvHIBAAoJEO2iHpS1ZXFvEeIE/ixQWhAC
-pnKjQZeTA7zcshH683NU/bBAjbOq7lJ51aWMXOdXExGJsBD0fyPtRJywMtSB4vrM
-F1WjKZlA0jBOxzxWaWpLvMwdwgkSiql8KTNActxIoijtu0e5GI3V+55Z+Cv/jsPD
-lzeYiob0cO6u/2todt6XVTyCIFKWjf6/5i/LdhXlw7J9gzrCwm28ITC4is3voTNh
-Uceqods6zDrk0qo=
-=1RsN
+kQAGKYjFBBgBAgAPAhsMBQJAhr5PBQkEnwTUAAoJEO2iHpS1ZXFvgVIFAI7F/XpV
+Pu8/kRZuDt1XytUMzPr3mR8/vl5KKd59yZT45hrr0tu4bJFV+izZDFHpkUXvQU+R
+5x7cpagr+kflUO8XyE2CJyUEzCauZo2j3ZbVpjXguKkdlXNdwfcI7F8Wfmdy9LTm
+U/W9S2HkHMXg0NmHonvGpEjT63Y7JBK4Bbyqz6klhKlT2gz8ERwj0JkrKlj/z69e
+S4/NPek/k5To+AI=
+=4kUB
 -----END PGP PUBLIC KEY BLOCK-----
 
 ----------------------------------------------------------------------
