--- a/lib/THANKS
+++ b/lib/THANKS
@@ -10,6 +10,7 @@ Bug reports, patches and/or suggestions were also received from:
 
 Jakub Bogusz
 Lars Engebretsen
+Dirk Dierckx
 Alexey Melnikov
 Marc Mutz
 Andorz Nilsson
