--- a/lib/NEWS
+++ b/lib/NEWS
@@ -8,7 +8,9 @@ See the end for copying conditions.
 Earlier they were not implemented at all.
 
 ** API and ABI modifications.
-No changes since last version.
+gsasl_randomize: CHANGE.  Parameter "strong" was removed (use gsasl_nonce
+                          instead of a zero strong parameter).
+gsasl_nonce: ADD.
 
 * Changes in 0.1.0 (released 2004-04-16)
 
