--- a/doc/gsasl.texi
+++ b/doc/gsasl.texi
@@ -1358,7 +1358,7 @@ similar to the GSSAPI callback).
 @include texi/stringprep.c.texi
 @include texi/base64.c.texi
 @include texi/md5pwd.c.texi
-@include texi/nettle.c.texi
+@include texi/crypto.c.texi
 
 
 
