--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@ GNU SASL NEWS -- history of user-visible changes.               -*- outline -*-
 Copyright (C) 2002, 2003, 2004 Simon Josefsson
 See the end for copying conditions.
 
-* Changes in 0.1.1 (unreleased)
+* Changes in 0.1.1 (released 2004-06-26)
 
 ** In the command line client, the default quality of protection is now none.
 
