--- a/lib/NEWS
+++ b/lib/NEWS
@@ -2,7 +2,7 @@ GNU SASL LIBRARY NEWS -- History of user-visible changes.        -*- outline -*-
 Copyright (C) 2002, 2003, 2004 Simon Josefsson
 See the end for copying conditions.
 
-* Changes in 0.1.1 (unreleased)
+* Changes in 0.1.1 (released 2004-06-26)
 
 ** gsasl_client_suggest_mechanism and gsasl_server_suggest_mechanism now work.
 Earlier they were not implemented at all.
