--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,10 @@ See the end for copying conditions.
 
 * Changes in 0.1.2 (unreleased)
 
+** Cross compile builds should work.
+It should work for any sane cross compile target, but the only tested
+platform is uClibc/uClinux on Motorola Coldfire.
+
 ** The GNU Readline library is used to read data, if available.
 
 ** Passwords read from stdin are not echoed to the terminal.
