--- a/lib/NEWS
+++ b/lib/NEWS
@@ -4,6 +4,10 @@ See the end for copying conditions.
 
 * Changes in 0.1.2 (unreleased)
 
+** Cross compile builds should work.
+It should work for any sane cross compile target, but the only tested
+platform is uClibc/uClinux on Motorola Coldfire.
+
 ** API and ABI modifications.
 
 * Changes in 0.1.1 (released 2004-06-26)
