--- a/doc/gsasl.texi
+++ b/doc/gsasl.texi
@@ -367,7 +367,7 @@ GCC 2.95.4 and GNU Make. @code{alpha-unknown-freebsd4.7},
 @cindex uClinux
 @cindex uClibc
 
-GCC 3.4 and GNU Make @code{m68k-uclinux-elf}.  (Only the library.)
+GCC 3.4 and GNU Make @code{m68k-uclinux-elf}.
 
 @end enumerate
 
